--- a/dot/Cargo.toml
+++ b/dot/Cargo.toml
@@ -21,19 +21,16 @@ tokio = '0.1.22'
 trie-root = '0.15.2'
 
 [dependencies.babe]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/consensus/babe'
 package = 'substrate-consensus-babe'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [dependencies.babe-primitives]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/consensus/babe/primitives'
 package = 'substrate-consensus-babe-primitives'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [dependencies.basic-authorship]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/basic-authorship'
 package = 'substrate-basic-authorship'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [dependencies.codec]
 package = 'parity-scale-codec'
@@ -44,57 +41,46 @@ features = ['termination']
 version = '3.1.3'
 
 [dependencies.grandpa]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/finality-grandpa'
 package = 'substrate-finality-grandpa'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [dependencies.grandpa-primitives]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/finality-grandpa/primitives'
 package = 'substrate-finality-grandpa-primitives'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [dependencies.inherents]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/inherents'
 package = 'substrate-inherents'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [dependencies.network]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/network'
 package = 'substrate-network'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [dependencies.dot-runtime]
 path = 'runtime'
 
 [dependencies.primitives]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/primitives'
 package = 'substrate-primitives'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [dependencies.sr-io]
-git = 'https://github.com/paritytech/substrate.git'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
+path = '../substrate/core/sr-io'
 
 [dependencies.substrate-cli]
-git = 'https://github.com/paritytech/substrate.git'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
+path = '../substrate/core/cli'
 
 [dependencies.substrate-client]
-git = 'https://github.com/paritytech/substrate.git'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
+path = '../substrate/core/client'
 
 [dependencies.substrate-executor]
-git = 'https://github.com/paritytech/substrate.git'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
+path = '../substrate/core/executor'
 
 [dependencies.substrate-service]
-git = 'https://github.com/paritytech/substrate.git'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
+path = '../substrate/core/service'
 
 [dependencies.transaction-pool]
-git = 'https://github.com/paritytech/substrate.git'
+path = '../substrate/core/transaction-pool'
 package = 'substrate-transaction-pool'
-rev = '165e7c93ae0593a93634139e4a74371bb35cfaac'
 
 [workspace]
 members = ['runtime']
