--- a/substrate-subxt/Cargo.toml
+++ b/substrate-subxt/Cargo.toml
@@ -19,24 +19,24 @@ futures = "0.1.28"
 jsonrpc-core-client = { version = "13.0", features = ["ws"] }
 num-traits = { version = "0.2", default-features = false }
 parity-scale-codec = { version = "1.0", default-features = false, features = ["derive", "full"] }
-runtime_metadata = { git = "https://github.com/paritytech/substrate/", package = "srml-metadata" }
-runtime_support = { git = "https://github.com/paritytech/substrate/", package = "srml-support" }
-runtime_primitives = { git = "https://github.com/paritytech/substrate/", package = "sr-primitives" }
+runtime_metadata = { path = "../substrate/srml/metadata", package = "srml-metadata" }
+runtime_support = { path = "../substrate/srml/support", package = "srml-support" }
+runtime_primitives = { path = "../substrate/core/sr-primitives", package = "sr-primitives" }
 serde = { version = "1.0", features = ["derive"] }
-sr-version = { git = "https://github.com/paritytech/substrate/", package = "sr-version" }
-srml-system = { git = "https://github.com/paritytech/substrate/", package = "srml-system" }
-srml-balances = { git = "https://github.com/paritytech/substrate/", package = "srml-balances" }
-srml-contracts = { git = "https://github.com/paritytech/substrate/", package = "srml-contracts" }
-srml-indices = { git = "https://github.com/paritytech/substrate/", package = "srml-indices" }
-substrate-rpc-api = { git = "https://github.com/paritytech/substrate/", package = "substrate-rpc-api" }
-substrate-rpc-primitives = { git = "https://github.com/paritytech/substrate/", package = "substrate-rpc-primitives" }
-substrate-primitives = { git = "https://github.com/paritytech/substrate/", package = "substrate-primitives" }
-txpool = {  git = "https://github.com/paritytech/substrate/", package = "substrate-transaction-graph" }
+sr-version = { path = "../substrate/core/sr-version", package = "sr-version" }
+srml-system = { path = "../substrate/srml/system", package = "srml-system" }
+srml-balances = { path = "../substrate/srml/balances", package = "srml-balances" }
+srml-contracts = { path = "../substrate/srml/contracts", package = "srml-contracts" }
+srml-indices = { path = "../substrate/srml/indices", package = "srml-indices" }
+substrate-rpc-api = { path = "../substrate/core/rpc/api", package = "substrate-rpc-api" }
+substrate-rpc-primitives = { path = "../substrate/core/rpc/primitives", package = "substrate-rpc-primitives" }
+substrate-primitives = { path = "../substrate/core/primitives", package = "substrate-primitives" }
+txpool = {  path = "../substrate/core/transaction-pool/graph", package = "substrate-transaction-graph" }
 url = "1.7"
 
 [dev-dependencies]
 env_logger = "0.6"
-node-runtime = { git = "https://github.com/paritytech/substrate/", package = "node-runtime" }
-substrate-keyring = { git = "https://github.com/paritytech/substrate/", package = "substrate-keyring" }
+node-runtime = { path = "../substrate/node/runtime", package = "node-runtime" }
+substrate-keyring = { path = "../substrate/core/keyring", package = "substrate-keyring" }
 tokio = "0.1"
 wabt = "0.9.0"
