--- a/substrate/Cargo.toml
+++ b/substrate/Cargo.toml
@@ -19,6 +19,7 @@ vergen = "3.0.4"
 
 [workspace]
 members = [
+	"core/wasm-proof",
 	"core/authority-discovery",
 	"core/application-crypto",
 	"core/chain-spec",
