--- a/substrate/core/executor/Cargo.toml
+++ b/substrate/core/executor/Cargo.toml
@@ -22,6 +22,7 @@ parking_lot = "0.9.0"
 log = "0.4.8"
 libsecp256k1 = "0.3.0"
 tiny-keccak = "1.5.0"
+wasm-proof = { package = "wasm-proof", path = "../wasm-proof" }
 
 [dev-dependencies]
 assert_matches = "1.3.0"
